@@ -29,7 +29,8 @@ ToDo/Notes:
 	- Add vol->mft_data_pos and initialize it at mount time.
 	- Rename init_runlist() to ntfs_init_runlist(), ntfs_vcn_to_lcn() to
 	  ntfs_rl_vcn_to_lcn(), decompress_mapping_pairs() to
-	  ntfs_mapping_pairs_decompress() and adapt all callers.
+	  ntfs_mapping_pairs_decompress(), ntfs_merge_runlists() to
+	  ntfs_runlists_merge() and adapt all callers.
 	- Add fs/ntfs/runlist.[hc]::ntfs_get_nr_significant_bytes(),
 	  ntfs_get_size_for_mapping_pairs(), ntfs_write_significant_bytes(),
 	  and ntfs_mapping_pairs_build(), adapted from libntfs.
